# littleVulkanGameEngine

./: .env.Unix.cmake  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  msys2Build.bat  unixBuild.sh
docs/: architecture.md  backend_guide.md  coords.md  editor_overview.md  io_pipeline.md
models/: testMap.mtl
models/physicsTestModel/: cube2.mtl
shaders/: point_light.frag  point_light.frag.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  컴파일.txt
src/: control_app.cpp  control_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_buffer.cpp  lve_buffer.hpp  lve_camera.cpp  lve_camera.hpp  lve_descriptors.cpp  lve_descriptors.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_texture.cpp  lve_texture.hpp  lve_utils.hpp  lve_window.cpp  lve_window.hpp  main.cpp
src/Assets/map/: testMap.json
src/Assets/models/modelLoadTest/: scene.gltf
src/Assets/textures/: app_icon.rc
src/Assets/textures/characters/: mob.json  player.json
src/Assets/textures/tileset/: base.tsx
src/Editor/: editor_history.cpp  editor_system.cpp  editor_system.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  resource_browser_panel.cpp  resource_browser_panel.hpp  scene_panel.cpp  scene_panel.hpp  viewport_info.hpp
src/Editor/History/: editor_history.hpp  editor_snapshot.cpp  editor_snapshot.hpp
src/Editor/Tools/: editor_picking.cpp  editor_picking.hpp
src/Editor/UI/: hierarchy_panel.cpp  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  scene_panel.cpp  scene_panel.hpp
src/Editor/Workflow/: editor_import.cpp  editor_import.hpp  resource_browser_panel.cpp  resource_browser_panel.hpp
src/Engine/: asset_database.cpp  asset_database.hpp  asset_defaults.hpp  audio_system.cpp  audio_system.hpp  camera.cpp  camera.hpp  coords.hpp  engine.cpp  engine.hpp  engine_loop.cpp  engine_loop.hpp  image_data.hpp  material_data.hpp  material_io.cpp  path_utils.hpp  scene.cpp  scene.hpp  scene_system.cpp  scene_system.hpp
src/Engine/Backend/: buffer.cpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  editor_render_backend.hpp  input.hpp  model_data.hpp  object_buffer.hpp  pipeline.cpp  render_assets.hpp  render_backend.hpp  render_types.hpp  runtime_backend.hpp  runtime_window.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/Engine/Backend/Factory/: runtime_backend_factory.cpp  runtime_backend_factory.hpp
src/Engine/Backend/Vulkan/: runtime_backend.cpp  runtime_backend.hpp
src/Engine/Backend/Vulkan/Core/: descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp  vulkan_input.cpp  vulkan_input.hpp  window_backend.cpp  window_backend.hpp
src/Engine/Backend/Vulkan/Editor/: editor_render_backend.cpp  editor_render_backend.hpp
src/Engine/Backend/Vulkan/Render/: asset_factory.cpp  asset_factory.hpp  frame_info.hpp  material.cpp  material.hpp  model.cpp  model.hpp  object_buffer_pool.cpp  object_buffer_pool.hpp  point_light_system.cpp  point_light_system.hpp  render_backend.cpp  render_backend.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  sprite_render_system.cpp  sprite_render_system.hpp  texture.cpp  texture.hpp
src/Engine/Backend/Vulkan/Shaders/: point_light.frag  simple_shader.frag  simple_shader.vert  sprite_shader.frag  sprite_shader.vert
src/Engine/Backend/Window/: glfw_input.cpp  glfw_input.hpp  window.cpp  window.hpp  window_backend.cpp  window_backend.hpp
src/Engine/IO/: image_data.hpp  image_io.cpp  image_io.hpp  material_io.cpp  material_io.hpp  model_io.cpp  model_io.hpp
src/Game/: background_system.cpp  background_system.hpp  bullet_system.cpp  bullet_system.hpp  mob_system.cpp  mob_system.hpp  player_controller.cpp  player_controller.hpp
src/Game/Tilemap/: tiled_loader.cpp  tiled_loader.hpp  tiled_map.hpp  tilemap_system.cpp  tilemap_system.hpp
src/Game/UI/: hud_overlay.cpp  hud_overlay.hpp  score_overlay.hpp
src/ImGui/: imgui_layer.cpp  imgui_layer.hpp
src/ImGui/panels/: character_panel.cpp  character_panel.hpp
src/Rendering/: frame_info.hpp  material.cpp  material.hpp  model.cpp  model.hpp  point_light_system.cpp  point_light_system.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  sprite_render_system.cpp  sprite_render_system.hpp  texture.cpp  texture.hpp
src/Shaders/: simple_shader.frag  simple_shader.vert  sprite_shader.frag  sprite_shader.vert
src/debug/: dear_imgui.cpp  dear_imgui.hpp
src/physics/: collisionSystem.cpp  collisionSystem.hpp  lve_collision.cpp  lve_collision.hpp  lve_collisionSystem.cpp  lve_collisionSystem.hpp  physics_engine.cpp  physics_engine.hpp
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/utils/: game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  sprite_animator.cpp  sprite_animator.hpp  sprite_metadata.cpp  sprite_metadata.hpp
